too long image name fixed

--- a/src/app/board/image-bar/image-bar.component.scss
+++ b/src/app/board/image-bar/image-bar.component.scss
@@ -66,6 +66,10 @@
     .nameHelper {
       display: inline-block;
       vertical-align: middle;
+
+      width: 119px;
+      text-overflow: ellipsis;
+      overflow: hidden;
       cursor: text;
       border-bottom: 1px solid transparent;
       padding-left: 5px;
